DEPLOY: fix sidebar z-index

--- a/source/_styles/styles.styl
+++ b/source/_styles/styles.styl
@@ -360,6 +360,7 @@ figure.highlight .table-container {
 
   .sidebar {
     left: -320px;
+    z-index: 1200;
   }
 
   .sidebar-toggle {
